--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,10 @@ body {
   transform: translateZ(0);
   will-change: transform;
 }
+
+
+.pageContent{
+  padding: 1rem;
+  height: 100%;
+  overflow-y: auto;
+}
